# BNKEN-MotionDataChallenge

./: .gitignore  README.md  main-easy.ipynb  main-hard.ipynb  main-normal.ipynb  model.py  predict.ipynb  pyproject.toml  train.py
outputs/best/: test_easy.csv  test_hard.csv  test_normal.csv
outputs/best(without postprocessing)/: test_easy.csv  test_hard.csv  test_normal.csv
